website/versioned_docs/version-12.0/networking.md
---
id: version-12.0-networking
title: Networking the console
sidebar_label: Networking the console
original_id: networking
---

There are a number of ways for the console to communicate with lighting
fixtures beyond the traditional DMX sockets, and these are described in
this chapter.

You can also connect networked processing nodes, which allow you to
control up to 64 universes of DMX.

The console may also be networked with other Titan consoles for
multi-user control, and for backup.

At the end of the chapter is a section which aims to cover the basics of
IP addressing, which is essential for various features on the console
such as Art-Net.

  --------------------------------------------------------------------------------------------- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  ![info](/docs/images/image6.png)   Lighting networks need to transfer of large amounts of data. For best reliability you should use network wiring which is dedicated to the lighting system and physically isolated from other networks, and uses simple hubs rather than intelligent switches.\
                                                                                                Connecting to an existing network with other network traffic is possible but can lead to problems both with the lighting equipment and with other IT equipment on the network. Intelligent Ethernet switches may drop or block lighting data. If you need to do this please read about the IP addresses you should use, in section 18.4.5.

  --------------------------------------------------------------------------------------------- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

If the console has multiple network ports, DMX will be output on all
ports. You can set this from the DMX module properties in the DMX
Settings window, each port is listed with a switch to enable or disable
it.
